Replaced pngs with pdfs, cleaned rubbish

--- a/Lab1/Lab1.tex
+++ b/Lab1/Lab1.tex
@@ -67,33 +67,33 @@
 		
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=\linewidth]{./Pictures/Function_1.png}
+			\includegraphics[width=\linewidth]{./Pictures/Function_1.pdf}
 			\caption{Графики для функции $\sin(x^2)$}
 		\end{figure}
 	
 		\newpage
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=\linewidth]{./Pictures/Function_2.png}
+			\includegraphics[width=\linewidth]{./Pictures/Function_2.pdf}
 			\caption{Графики для функции $\cos(\sin(x))$}
 		\end{figure}
 	
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=\linewidth]{./Pictures/Function_3.png}
+			\includegraphics[width=\linewidth]{./Pictures/Function_3.pdf}
 			\caption{Графики для функции $e^{\sin(\cos(x))}$}
 		\end{figure}
 	
 		\newpage
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=\linewidth]{./Pictures/Function_4.png}
+			\includegraphics[width=\linewidth]{./Pictures/Function_4.pdf}
 			\caption{Графики для функции $\ln(x + 3)$}
 		\end{figure}
 		
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[width=\linewidth]{./Pictures/Function_5.png}
+			\includegraphics[width=\linewidth]{./Pictures/Function_5.pdf}
 			\caption{Графики для функции $(x + 3)^{0.5}$}
 		\end{figure}
  		
