Added Lab4 and fixed Lab3's table of contents

--- a/Lab3/Lab3.tex
+++ b/Lab3/Lab3.tex
@@ -1,7 +1,7 @@
 \include{./Include/Preambule.tex}
 \newcommand{\tocsection}[1]{\section*{#1} \addcontentsline{toc}{section}{#1}}
 \newcommand{\tocsubsection}[1]{\subsection*{#1} \addcontentsline{toc}{subsection}{#1}}
-
+\renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}
 
 \begin{document}
 		\include{./Include/Title.tex}
